added new theme and picture

--- a/Superhero Creator/Views/Superhero/Delete.cshtml
+++ b/Superhero Creator/Views/Superhero/Delete.cshtml
@@ -51,6 +51,10 @@
             @Html.DisplayFor(model => model.catchphrase)
         </dd>
 
+        <dd>
+            @Html.DisplayFor(model => model.image)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
